--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,16 +1,7 @@
 /*custom CSS goes here*/
 
-
-
-
-
-
-/*body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+body {  
+    text-align: center;
+    background-image: url("/Assets/images/markus-spiske-Skf7HxARcoc-unsplash.jpg");  
 }
 
-a {
-  color: #00B7FF;
-}
-*/
